# GM48Scraper

./: Cargo.toml  README.md
src/: archive.rs  cli.rs  error.rs  filename.rs  html.rs  io.rs  main.rs  scrape.rs  url.rs  util.rs  zip.rs
src/archive/: extract.rs  print.rs
src/html/: extract.rs
src/scrape/: download.rs  game_jams.rs  games.rs
src/zip/: extract.rs  print.rs
