[package]
name = "gm48-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
colored-print = "0.1.1"
humansize = "2.1.3"
reqwest = "0.12.28"
sanitize-filename = "0.6.0"
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
zip = "7.0.0"