[package]
name = "gm48-scraper"
version = "0.2.1"
edition = "2024"
description = "CLI for scraping GameMaker data files from the GM48 Game Jam"
repository = "https://github.com/BioTomateDE/GM48Scraper"
license = "GPL-3.0"
keywords = ["gamemaker", "scraping", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored-print = "0.1.1"
compress-tools = "0.15.1"
futures = "0.3.31"
humansize = "2.1.3"
reqwest = "0.13.1"
sanitise-file-name = "1.0.0"
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
