[package]
name = "gm48-scraper"
version = "0.3.1"
edition = "2024"
description = "CLI for scraping GameMaker data files from the GM48 Game Jam"
repository = "https://github.com/BioTomateDE/GM48Scraper"
license = "GPL-3.0-or-later"
keywords = ["gamemaker", "scraping", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored-print = "0.1.2"
compress-tools = "0.15.1"
futures = "0.3.32"
humansize = "2.1.3"
reqwest = "0.13.2"
sanitise-file-name = "1.0.0"
scraper = "0.25.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
